# byte-stream-parser

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  maven_install.json  pom.tpl  release.sh
.github/workflows/: build.yaml  release.yaml
src/main/java/com/github/lyang/bytestreamparser/api/data/: BUILD.bazel  Data.java
src/main/java/com/github/lyang/bytestreamparser/api/parser/: BUILD.bazel  DataParser.java
src/main/java/com/github/lyang/bytestreamparser/composite/parser/: BUILD.bazel  ListParser.java  ObjectParser.java  VariableLengthParser.java
src/main/java/com/github/lyang/bytestreamparser/scalar/parser/: BUILD.bazel  BcdStringParser.java  BinaryParser.java  HexStringParser.java  NumberParser.java  StringIntegerParser.java  StringLongParser.java  StringNumberParser.java  StringParser.java  TxtStringParser.java  UnsignedByteParser.java  UnsignedShortParser.java
src/main/java/com/github/lyang/bytestreamparser/scalar/util/: InputStreams.java  Preconditions.java  Predicates.java  Strings.java
src/main/java/io/github/lyang/bytestreamparser/api/data/: Data.java
src/main/java/io/github/lyang/bytestreamparser/api/parser/: BUILD.bazel  DataParser.java
src/main/java/io/github/lyang/bytestreamparser/composite/parser/: BUILD.bazel  ListParser.java  ObjectParser.java  VariableLengthParser.java
src/main/java/io/github/lyang/bytestreamparser/scalar/parser/: BUILD.bazel  BcdStringParser.java  BinaryParser.java  HexStringParser.java  NumberParser.java  StringIntegerParser.java  StringLongParser.java  StringNumberParser.java  StringParser.java  TxtStringParser.java  UnsignedByteParser.java  UnsignedShortParser.java
src/main/java/io/github/lyang/bytestreamparser/scalar/util/: InputStreams.java  Preconditions.java  Predicates.java  Strings.java
src/main/java/org/bytestreamparser/api/data/: Data.java
src/main/java/org/bytestreamparser/api/parser/: BUILD.bazel  DataParser.java
src/main/java/org/bytestreamparser/composite/parser/: BUILD.bazel  ListParser.java  ObjectParser.java  VariableLengthParser.java
src/main/java/org/bytestreamparser/scalar/parser/: BUILD.bazel  BcdStringParser.java  BinaryParser.java  HexStringParser.java  NumberParser.java  StringIntegerParser.java  StringLongParser.java  StringNumberParser.java  StringParser.java  TxtStringParser.java  UnsignedByteParser.java  UnsignedShortParser.java
src/main/java/org/bytestreamparser/scalar/util/: InputStreams.java  Preconditions.java  Predicates.java  Strings.java
src/test/java/com/github/lyang/bytestreamparser/api/data/: BUILD.bazel  DataTest.java
src/test/java/com/github/lyang/bytestreamparser/api/data/testing/: BUILD.bazel  DataAssert.java  TestData.java
src/test/java/com/github/lyang/bytestreamparser/composite/parser/: BUILD.bazel  ListParserTest.java  ObjectParserTest.java  VariableLengthParserTest.java
src/test/java/com/github/lyang/bytestreamparser/scalar/parser/: BUILD.bazel  BcdStringParserTest.java  BinaryParserTest.java  HexStringParserTest.java  StringIntegerParserTest.java  StringLongParserTest.java  TxtStringParserTest.java  UnsignedByteParserTest.java  UnsignedShortParserTest.java
src/test/java/io/github/lyang/bytestreamparser/api/data/: BUILD.bazel  DataTest.java
src/test/java/io/github/lyang/bytestreamparser/api/data/testing/: BUILD.bazel  DataAssert.java  TestData.java
src/test/java/io/github/lyang/bytestreamparser/composite/parser/: BUILD.bazel  ListParserTest.java  ObjectParserTest.java  VariableLengthParserTest.java
src/test/java/io/github/lyang/bytestreamparser/scalar/parser/: BUILD.bazel  BcdStringParserTest.java  BinaryParserTest.java  HexStringParserTest.java  StringIntegerParserTest.java  StringLongParserTest.java  TxtStringParserTest.java  UnsignedByteParserTest.java  UnsignedShortParserTest.java
src/test/java/org/bytestreamparser/api/data/: BUILD.bazel  DataTest.java
src/test/java/org/bytestreamparser/api/data/testing/: BUILD.bazel  DataAssert.java  TestData.java
src/test/java/org/bytestreamparser/composite/parser/: BUILD.bazel  ListParserTest.java  ObjectParserTest.java  VariableLengthParserTest.java
src/test/java/org/bytestreamparser/scalar/parser/: BUILD.bazel  BcdStringParserTest.java  BinaryParserTest.java  HexStringParserTest.java  StringIntegerParserTest.java  StringLongParserTest.java  TxtStringParserTest.java  UnsignedByteParserTest.java  UnsignedShortParserTest.java
