package(default_visibility = ["//visibility:public"])

java_library(
    name = "parser",
    srcs = glob(["*.java"]),
    exports = [
        "//src/main/java/org/bytestreamparser/api/parser",
        "//src/main/java/org/bytestreamparser/scalar/util",
    ],
    deps = [
        "//src/main/java/org/bytestreamparser/api/parser",
        "//src/main/java/org/bytestreamparser/scalar/util",
    ],
)
