package(default_visibility = ["//visibility:public"])

java_library(
    name = "parser",
    srcs = glob(["*.java"]),
    exports = [
        "//src/main/java/com/github/lyang/bytestreamparser/scalar/parser",
    ],
    deps = [
        "//src/main/java/com/github/lyang/bytestreamparser/scalar/parser",
    ],
)
