package(default_visibility = ["//visibility:public"])

java_library(
    name = "parser",
    srcs = glob(["*.java"]),
    exports = [
        "//src/main/java/io/github/lyang/bytestreamparser/api/parser",
        "//src/main/java/io/github/lyang/bytestreamparser/scalar/util",
    ],
    deps = [
        "//src/main/java/io/github/lyang/bytestreamparser/api/parser",
        "//src/main/java/io/github/lyang/bytestreamparser/scalar/util",
    ],
)
