load("@contrib_rules_jvm//java:defs.bzl", "JUNIT5_DEPS", "java_test_suite")
load("@rules_jvm_external//:defs.bzl", "artifact")

java_test_suite(
    name = "parser",
    size = "small",
    srcs = glob(["*.java"]),
    runner = "junit5",
    runtime_deps = JUNIT5_DEPS,
    deps = [
        "//src/main/java/com/github/lyang/bytestreamparser/composite/parser",
        "//src/test/java/com/github/lyang/bytestreamparser/api/data/testing",
        "@maven//:org_junit_jupiter_junit_jupiter_api",
    ],
)
