package(default_visibility = ["//visibility:public"])

java_library(
    name = "testing",
    srcs = glob(["*.java"]),
    exports = [
        "//src/main/java/com/github/lyang/bytestreamparser/api/data",
        "@maven//:org_assertj_assertj_core",
    ],
    deps = [
        "//src/main/java/com/github/lyang/bytestreamparser/api/data",
        "@maven//:org_assertj_assertj_core",
    ],
)
